--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 4.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+   color: #ffffff; 
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: blue;
 }
 
 body {
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #1100ff;
 }
 button:focus,
 button:focus-visible {
@@ -61,7 +61,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ff9900;
   }
   button {
     background-color: #f9f9f9;
